MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/Broker_Monthly_Performance__c.object-meta.xml
<CustomObject>
    <label>Broker Monthly Performance</label>
    <nameField>
        <displayFormat>BMP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Monthly Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>