MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <label>Broker Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Monthly Performances</relationshipLabel>
    <relationshipName>Broker_Monthly_Performances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>