MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Current_Classification__c.field-meta.xml
<CustomField>
    <fullName>Current_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Classification</label>
    <referenceTo>Broker_Classification__c</referenceTo>
    <relationshipLabel>Broker Monthly Performances</relationshipLabel>
    <relationshipName>Broker_Monthly_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>