MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <length>225</length>
    <type>Text</type>
</CustomField>