MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales__c</fullName>
    <label>Monthly Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>