MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period</label>
    <length>225</length>
    <type>Text</type>
</CustomField>