MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Previous_Classification__c.field-meta.xml
<CustomField>
    <fullName>Previous_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Classification</label>
    <referenceTo>Broker_Classification__c</referenceTo>
    <relationshipLabel>Broker Monthly Performances (Previous Classification)</relationshipLabel>
    <relationshipName>Broker_Monthly_Performances1</relationshipName>
    <type>Lookup</type>
</CustomField>