MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/fields/Rolling_12M_Sales__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12M_Sales__c</fullName>
    <label>Total Classification Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>