MODON MRE BPDEV/force-app/main/default/objects/Broker_Monthly_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Broker_Agency__c</columns>
    <columns>Period__c</columns>
    <columns>Year__c</columns>
    <columns>Rolling_12M_Sales__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Broker_Agency__c</field>
        <operation>equals</operation>
        <value>BreakingBadAgency</value>
    </filters>
    <label>All</label>
</ListView>